--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/api/(.*)", "destination": "https://www.osusideas.online/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
